2007-06-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/base/scheduler.py (Event.__init__,
	  Scheduler.addEvents, ICalScheduler.parseCalendarFromFile,
	  ICalScheduler.parseCalendar):
	Fix debug statement.
	Add new method addEvents that adds (and not replaces) events to the
	scheduler.
	Make parseCalendar return a list of events and not do the replace
	just yet.
	Make parseCalendarFromFile do the replace after running parseCalendar.
	* flumotion/component/consumers/disker/disker.py
	  (DiskerMedium.remote_scheduleRecordings, Disker.configure_pipeline):
	Fix regression of the remote method for scheduling additional
	recordings.

2007-06-01  Michael Smith <msmith@fluendo.com>

	* flumotion/component/misc/porter/porterclient.py:
	* flumotion/twisted/fdserver.py:
	  When creating a new connection in a porter client, get the socket
	  peer address immediately.
	  Use this to respond to getPeer() later, more closely mirroring
	  tcp.Server's behaviour.
	  Fixes errors in httpfile client shutdown in some cases.

2007-06-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/bouncers/icalbouncer.py (IcalBouncer.do_setup,
	  IcalBouncer.do_authenticate):
	Port ical bouncer to new scheduling code.

	* flumotion/component/consumers/disker/disker.py
	  (Disker.configure_pipeline):
	Fix typo.
2007-06-01  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/consumers/disker/disker.py
	  (Disker._notify_caps_cb, Disker.configure_pipeline,
	  Disker.eventStarted, Disker.eventStopped):
	Port of disker to new scheduling code.

2007-05-30  Michael Smith <msmith@fluendo.com>

	* flumotion/component/misc/httpfile/httpfile.py:
	  Two serious bugs fixed: connected-clients in the uiState should be 
	  the number of clients currently connected, so don't try to put the
	  entire connected_clients list in there.
	  Don't use the wrong (non-existing) variable for the number of bytes