@@ -42,6 +42,21 @@ T_ = messages.gettexter('flumotion')
 
 __all__ = ['Disker']
 
+
+"""
+Disker has a property "ical-schedule". This allows an ical file to be specified
+in the config and have recordings scheduled based on events. This file will be 
+monitored for changes and events reloaded if this happens. The filename 
+template that will be used for these files is taken from the summary of the
+event. This template is strftime formatted. The ical file can have events
+specified in a different timezone. The files saved from these events should
+have their strftime format strings therefore formatted with the timezone
+of the event and not of the local system. Files resulting from non-ical
+triggered scheduling should use the timezone of the local system.
+
+Note that this ideal scenario is not the current scenario.
+"""
+
 try:
     # icalendar and dateutil modules needed for scheduling recordings
     from icalendar import Calendar
